--- a/packages/web-server/package.json
+++ b/packages/web-server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ethers": "^5.6.0",
     "express": "^4.17.3",
-    "hardhat": "^2.9.1"
+    "hardhat": "^2.9.1",
+    "web3": "^1.7.1"
   }
 }
