Progress but buggy with nft storage client

--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -42,8 +42,11 @@
     "fortmatic": "^2.2.1",
     "graphiql": "^1.4.7",
     "graphql": "^15.3.0",
+    "ipfs-car": "^0.6.2",
     "ipfs-http-client": "^56.0.1",
     "isomorphic-fetch": "^3.0.0",
+    "mime": "^3.0.0",
+    "nft.storage": "^6.0.2",
     "node-watch": "^0.7.1",
     "postcss": "^8.2.6",
     "qrcode.react": "^1.0.0",
