Update dependabot workflow to include call to frontend test suite

--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -1,24 +1,29 @@
-# name: Dependabot auto-approve
-# on: pull_request_target
+name: Dependabot auto-approve
+on: pull_request_target
 
-# permissions:
-#   contents: write
-#   pull-requests: write
+permissions:
+  contents: write
+  pull-requests: write
 
-# jobs:
-#   dependabot:
-#     runs-on: ubuntu-latest
-#     if: ${{ github.actor == 'dependabot[bot]' }}
-#     steps:
+jobs:
+  call-frontend-test-suite:
+    uses: ./.github/workflows/frontend-test-suite.yml
+    secrets:
+      EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
 
-#       - name: Approve a PR
-#         run: gh pr review --approve "$PR_URL"
-#         env:
-#           PR_URL: ${{github.event.pull_request.html_url}}
-#           GITHUB_TOKEN: ${{secrets.MYTOKEN}}
+  dependabot:
+    needs: [ call-frontend-test-suite ]
+    runs-on: ubuntu-latest
+    if: ${{ github.actor == 'dependabot[bot]' }}
+    steps:
+      - name: Approve a PR
+        run: gh pr review --approve "$PR_URL"
+        env:
+          PR_URL: ${{github.event.pull_request.html_url}}
+          GITHUB_TOKEN: ${{secrets.MYTOKEN}}
 
-#       - name: Enable auto-merge for Dependabot PRs
-#         run: gh pr merge --auto --merge "$PR_URL"
-#         env:
-#           PR_URL: ${{github.event.pull_request.html_url}}
-#           GITHUB_TOKEN: ${{secrets.MYTOKEN}}
+      - name: Enable auto-merge for Dependabot PRs
+        run: gh pr merge --auto --merge "$PR_URL"
+        env:
+          PR_URL: ${{github.event.pull_request.html_url}}
+          GITHUB_TOKEN: ${{secrets.MYTOKEN}}
