--- a/.github/workflows/frontend-test-suite.yml
+++ b/.github/workflows/frontend-test-suite.yml
@@ -3,7 +3,11 @@ name: Front-end Test Suite
 on:
   push:
   pull_request:
-
+  workflow_call:
+    secrets:
+      EXPO_TOKEN:
+        required: true
+        
 jobs:
   build:
     runs-on: ubuntu-latest
