--- a/.github/workflows/frontend-test-suite.yml
+++ b/.github/workflows/frontend-test-suite.yml
@@ -28,7 +28,7 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: 📦 Install dependencies
-        run: yarn install
+        run: pkg-config --cflags --libs /usr/local/Cellar/libusb/1.0.20/lib/pkgconfig/libusb-1.0.pc && yarn install
 
       - name: 🚀 Build app
         run: cd packages/react-native-app && eas build --non-interactive
