--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   },
   "workspaces": {
     "packages": [
-      "packages/*"
+      "packages/react-native-app"
     ],
     "nohoist": [
       "**/@graphprotocol/graph-ts",
